# DESSAUX_Damien_ECF4

./: README.md  pyproject.toml  requirements.txt
api/: main.py
api/core/: database.py  log_config.yaml  security.py  settings.py
api/dependencies/: auth.py  ml_model.py
api/models/: prediction.py  user.py
api/routers/: auth.py  health.py  prediction.py  private_prediction.py  private_user.py  user.py
api/schemas/: prediction.py  user.py  utils.py
api/services/: prediction.py  user.py
api/utils/: logger.py  ml_model.py  set_up_log.py
data/: api.db  titles_clean.csv
docs/: MLD.loo
models/: tf_idf_vectorizer.pkl  vectorizer.pkl
notebook/: ecf_fake_news.ipynb
