[project]
name = "dessaux-damien-ecf4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.49",
    "tensorflow>=2.21.0",
    "uvicorn>=0.44.0",
]
